# macsim

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  SConscript  SConstruct  build.py  pyproject.toml
def/: core.param.def  debug.param.def  inst.stat.def  io.param.def  io.stat.def  memory.param.def  memory.stat.def
src/: .gdb_history  .retire.cc.swo  CMakeLists.txt  allocate.cc  allocate.h  config.h  core.cc  cxl_t3.cc  cxl_t3.h  dram.cc  dram.h  dram_ctrl.cc  dram_ctrl.h  dram_dramsim3.cc  dram_dramsim3.h  dram_ramulator.cc  dram_ramulator.h  frontend.cc  global_defs.h  ioctrl.cc  ioctrl.h  knob.cc  macsim.cc  macsim.h  map.cc  memory.cc  memreq_info.cc  memreq_info.h  mxp_wrapper.cc  mxp_wrapper.h  packet_info.cc  packet_info.h  pcie_endpoint.cc  pcie_endpoint.h  pcie_rc.cc  pcie_rc.h  retire.cc  retire.h  rob.cc  rob.h  (+7 more)
tools/example_benchmarks/graph/: .gdb_history  bfs  bfs.cpp  bfs.s  graphgen  graphgen.cpp  middle.txt  small.txt
tools/example_benchmarks/simple/: hello  hello.cpp
tools/trace_converter/: trace_read_conv.h
tools/x86_trace_generator/: trace_generator.cpp  trace_generator.h
